Horizontal overflow fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@
     background-color: #F0E5F3;
     font-family: Permanent Marker;
     position: relative;
+    overflow-x: auto;
   }
 
   /* -----------------------------------------------Main section styling */
